--- a/art.html
+++ b/art.html
@@ -20,7 +20,9 @@
             <h2>Social</h2>
             <ul class="vnav">
                 <li><a href="https://bsky.app/profile/milobit.net">bluesky</a></li>
+                <li><a href="https://github.com/milo256">github</a></li>
                 <li><a href="https://www.youtube.com/@milo3733">youtube</a></li>
+                <li><a href="https://www.tumblr.com/blog/milo512">tumblr</a></li>
                 <li><b>discord:</b> @milo28</li>
             </ul>
         </div>
