--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             <h2>social</h2>
             <ul class="vnav">
                 <li><a href="https://bsky.app/profile/milobit.net">bluesky</a></li>
+                <li><a href="https://github.com/milo256">github</a></li>
                 <li><a href="https://www.youtube.com/@milo3733">youtube</a></li>
+                <li><a href="https://www.tumblr.com/blog/milo512">tumblr</a></li>
                 <li><b>discord:</b> @milo28</li>
             </ul>
         </div>
@@ -40,6 +42,9 @@
             <p>
                 If blender modeling timelapses set to questionable music choices are more your thing, allow me to direct you to my
                 <a href="https://www.youtube.com/@milo3733">youtube channel</a>.
+            </p>
+            <p>
+            This website is hosted <a href="https://github.com/milo256/milobit.net">here</a>.
             </p>
         </div>
         <div style="width:200px" class="window">
