fix tumblr link

--- a/art.html
+++ b/art.html
@@ -22,7 +22,7 @@
                 <li><a href="https://bsky.app/profile/milobit.net">bluesky</a></li>
                 <li><a href="https://github.com/milo256">github</a></li>
                 <li><a href="https://www.youtube.com/@milo3733">youtube</a></li>
-                <li><a href="https://www.tumblr.com/blog/milo512">tumblr</a></li>
+                <li><a href="https://milo512.tumblr.com">tumblr</a></li>
                 <li><b>discord:</b> @milo28</li>
             </ul>
         </div>
